[project]
name = "llm-debug-proxy"
version = "0.1.0"
description = "Local OpenAI-compatible proxy for comparing LLM requests and responses across projects."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "uvicorn[standard]>=0.20.0",
]

[project.scripts]
llm-debug-proxy = "llm_debug_proxy.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
